--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 3;
   position: fixed;
   padding: $spacing-small;
   background-color: transparent;
