--- a/src/components/SearchModal/SearchModal.module.scss
+++ b/src/components/SearchModal/SearchModal.module.scss
@@ -16,7 +16,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 4;
   position: absolute;
   padding-top: $spacing-large;
   background-color: $color-neutral-lightest;
