--- a/src/pages/HomePage/components/MobileFilters/MobileFilters.module.scss
+++ b/src/pages/HomePage/components/MobileFilters/MobileFilters.module.scss
@@ -3,7 +3,7 @@
 
 .mobileFilters {
   top: 9rem;
-  z-index: 100;
+  z-index: 1;
   flex-wrap: wrap;
   position: sticky;
   gap: $spacing-xsmall;
